--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
 		"global-strict": 0,
 		"no-empty": 0,
 		"no-constant-condition": 0,
-		"quotes": 0
+		"quotes": 0,
+		"strict": 0
 	},
 	"globals": {
 		"angular": false
