--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "angular-datetime",
   "version": "0.3.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-bump": "0.0.16"
+    "eslint": "^0.19.0",
+    "eslint-plugin-jasmine": "^1.0.0",
+    "grunt": "^0.4.5",
+    "grunt-bump": "0.0.16",
+    "grunt-contrib-concat": "^0.5.1",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5"
   }
 }
