Use ng-annotate

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-bump": "0.0.16",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-ng-annotate": "^0.10.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
