--- a/.eslintrc
+++ b/.eslintrc
@@ -3,18 +3,11 @@
 		"browser": true
 	},
 	"rules": {
-		"no-trailing-spaces": 0,
-		"eqeqeq": 0,
-		"no-shadow": 0,
-		"consistent-return": 0,
 		"no-use-before-define": [2, "nofunc"],
-		"global-strict": 0,
-		"no-empty": 0,
-		"no-constant-condition": 0,
-		"quotes": 0,
-		"strict": 0
+		"quotes": [2, "double", "avoid-escape"]
 	},
-	"globals": {
-		"angular": true
-	}
+	"extends": [
+		"eslint:recommended",
+		"angular"
+	]
 }
