--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "angular-datetime",
   "version": "1.3.0",
   "devDependencies": {
-    "eslint": "^0.19.0",
+    "eslint": "^1.6.0",
+    "eslint-plugin-angular": "^0.12.0",
     "eslint-plugin-jasmine": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-bump": "0.0.16",
