Apply semi rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
 	"rules": {
 		"no-use-before-define": [2, "nofunc"],
 		"quotes": [2, "double", "avoid-escape"],
-		"angular/timeout-service": 0
+		"angular/timeout-service": 0,
+		"semi": [2, "always"]
 	},
 	"extends": [
 		"eslint:recommended",
