--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "2.1.0",
   "devDependencies": {
     "eslint": "^1.6.0",
+    "eslint-config-angular": "^0.4.0",
     "eslint-plugin-angular": "^0.12.0",
     "eslint-plugin-jasmine": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-bump": "0.0.16",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^18.0.0",
     "grunt-ng-annotate": "^0.10.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
