--- a/bower.json
+++ b/bower.json
@@ -28,9 +28,9 @@
     "example"
   ],
   "dependencies": {
-    "angular": "1.2.x"
+    "angular": "^1.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.x"
+    "angular-mocks": "^1.2.0"
   }
 }
