--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,13 @@
 {
 	"env": {
-		"browser": true,
-		"es6": true
+		"es6": true,
+		"node": true
 	},
 	"rules": {
 		"no-use-before-define": [2, "nofunc"],
 		"semi": [2, "always"]
 	},
 	"extends": [
-		"eslint:recommended",
-		"angular"
+		"eslint:recommended"
 	]
 }
