Switch to browserify

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   ],
   "scripts": {
     "test": "eslint **/*.js && mocha",
-    "build": "n-concat src/main.js src/*.js | babel --filename datetime.js | n-pipe dist/datetime.js && node build-demo.js",
-    "build-polyfill": "browserify polyfill/polyfill.js | n-pipe dist/polyfill.js",
+    "build": "browserify index.js | n-pipe dist/datetime.js && node build-demo.js",
     "watch": "n-run -w src/* \"npm run build\"",
-    "watch-polyfill": "n-run -w polyfill/* \"npm run build-polyfill\"",
     "preversion": "npm test && npm run build",
     "version": "git add .",
     "postversion": "git push --follow-tags && npm publish"
+  },
+  "browserify": {
+	"transform": ["browserify-shim", "babelify"]
+  },
+  "browserify-shim": {
+	"custom-input": "global:customInput"
   },
   "homepage": "https://github.com/eight04/angular-datetime",
   "bugs": {
@@ -26,21 +30,21 @@
   },
   "license": "MIT",
   "author": "eight <eight04@gmail.com>",
-  "main": "dist/datetime.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/eight04/angular-datetime.git"
   },
   "dependencies": {
     "angular": "^1.2.0",
-    "core-js": "^2.4.1",
     "custom-input": "^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
-    "babel-cli": "^6.18.0",
     "babel-plugin-angularjs-annotate": "^0.6.0",
     "babel-preset-env": "^1.1.4",
+    "browserify": "^14.1.0",
+    "browserify-shim": "^3.8.13",
     "eslint": "^3.12.2",
     "eslint-config-angular": "^0.4.0",
     "eslint-plugin-angular": "^0.12.0",
