--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "postversion": "git push --follow-tags && npm publish"
   },
   "browserify": {
-	"transform": ["browserify-shim", "babelify"]
+    "transform": [
+      "browserify-shim",
+      "babelify"
+    ]
   },
   "browserify-shim": {
-	"custom-input": "global:customInput"
+    "custom-input": "global:customInput"
   },
   "homepage": "https://github.com/eight04/angular-datetime",
   "bugs": {
@@ -37,7 +40,7 @@
   },
   "dependencies": {
     "angular": "^1.2.0",
-    "custom-input": "^0.1.0"
+    "custom-input": "^0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
@@ -52,23 +55,5 @@
     "jsdom-global": "^2.1.1",
     "mocha": "^3.2.0",
     "npm-build-tools": "^2.2.5"
-  },
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": {
-              "ie": 8
-            }
-          },
-          "loose": true
-        }
-      ]
-    ],
-    "plugins": [
-      "angularjs-annotate"
-    ]
   }
 }
