--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,11 @@
 	},
 	"extends": [
 		"eslint:recommended"
-	]
+	],
+	"overrides": [{
+		"files": ["**/rollup.config.js"],
+		"parserOptions": {
+			"sourceType": "module"
+		}
+	}]
 }
