--- a/package.json
+++ b/package.json
@@ -11,20 +11,11 @@
   ],
   "scripts": {
     "test": "eslint **/*.js && mocha",
-    "build": "browserify index.js | n-pipe dist/datetime.js && node build-demo.js",
+    "build": "rollup -c && node build-demo.js",
     "watch": "n-run -w lib/* \"npm run build\"",
     "preversion": "npm test && npm run build",
     "version": "git add .",
     "postversion": "git push --follow-tags && npm publish"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim",
-      "babelify"
-    ]
-  },
-  "browserify-shim": {
-    "custom-input": "global:customInput"
   },
   "homepage": "https://github.com/eight04/angular-datetime",
   "bugs": {
@@ -34,6 +25,7 @@
   "license": "MIT",
   "author": "eight <eight04@gmail.com>",
   "main": "index.js",
+  "browser": "dist/datetime.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/eight04/angular-datetime.git"
@@ -44,16 +36,20 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
-    "babel-plugin-angularjs-annotate": "^0.6.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.1.4",
-    "browserify": "^14.1.0",
-    "browserify-shim": "^3.8.13",
-    "eslint": "^3.12.2",
-    "eslint-config-angular": "^0.4.0",
-    "eslint-plugin-angular": "^0.12.0",
+    "eslint": "^4.6.1",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^3.1.1",
     "jsdom": "^9.11.0",
     "jsdom-global": "^2.1.1",
     "mocha": "^3.2.0",
-    "npm-build-tools": "^2.2.5"
+    "npm-build-tools": "^2.2.5",
+    "rollup": "^0.49.3",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-re": "github:eight04/rollup-plugin-re#dev-capture",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
