--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "angular": "^1.2.0",
-    "custom-input": "^0.2.1"
+    "custom-input": "^0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
@@ -49,6 +49,7 @@
     "rollup": "^0.49.3",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1"
   }
 }
