--- a/package.json
+++ b/package.json
@@ -31,25 +31,28 @@
     "url": "https://github.com/eight04/angular-datetime.git"
   },
   "dependencies": {
-    "angular": "^1.2.0",
-    "custom-input": "^0.3.0"
+    "custom-input": "^0.3.1"
   },
   "devDependencies": {
-    "angular-mocks": "^1.2.0",
-    "babel-core": "^6.26.0",
+    "angular": "^1.7.2",
+    "angular-mocks": "^1.7.2",
+    "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.1.4",
-    "eslint": "^4.6.1",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
     "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^3.1.1",
-    "jsdom": "^9.11.0",
-    "jsdom-global": "^2.1.1",
-    "mocha": "^3.2.0",
+    "eslint-plugin-angular": "^3.3.0",
+    "jsdom": "^11.11.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.2.0",
     "npm-build-tools": "^2.2.5",
-    "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup": "^0.60.7",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-cjs-es": "^0.3.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^4.0.0"
+  },
+  "peerDependencies": {
+    "angular": "^1.2.0"
   }
 }
